--- a/client/src/Components/MedicalWorkbenchSetup/VitalsMaster/vitals_master.scss
+++ b/client/src/Components/MedicalWorkbenchSetup/VitalsMaster/vitals_master.scss
@@ -1,7 +1,7 @@
 .vitals_master {
   #vitalsMasterDivCntr {
     .ReactTable {
-      max-height: 20vh !important;
+      max-height: 26vh !important;
     }
   }
 
@@ -9,22 +9,28 @@
     margin: 5px 0 0;
     padding: 0;
     list-style: none;
-    border: 1px solid #000;
+    border: 1px solid #d3d3d3;
     overflow: auto;
-    height: 20vh;
+    height: 22vh;
     li {
-      border-bottom: 1px solid #000;
+      border-bottom: 1px solid #d3d3d3;
       padding: 0;
       margin: 0;
       list-style: none;
+      font-size: 0.8rem;
       span {
         display: inline-block;
       }
       span:first-child {
-        border-right: 1px solid #000;
+        border-right: 1px solid #d3d3d3;
         padding: 6px 10px;
         margin-right: 10px;
       }
+    }
+  }
+  #vitalsMasterDetailCntr {
+    .ReactTable {
+      max-height: 25vh !important;
     }
   }
 }
