--- a/client/src/Components/PatientProfile/patientprofile.scss
+++ b/client/src/Components/PatientProfile/patientprofile.scss
@@ -87,7 +87,7 @@
     }
     .patientVital {
       font-size: 0.8rem;
-      width: 330px;
+      width: 33%;
       line-height: 1.3rem;
       padding-left: 10px;
       padding-right: 10px;
@@ -126,7 +126,7 @@
     font-size: 1rem;
     text-transform: uppercase;
     position: fixed;
-    top: 126px;
+    top: 123px;
     z-index: 99;
     ul {
       position: relative;
@@ -180,7 +180,7 @@
         list-style: none;
         display: inline-block;
         section {
-          width: 300px;
+          width: 30vw;
           height: auto;
           position: absolute;
           right: 0;
@@ -217,6 +217,7 @@
             border-radius: 20px;
             background: #3f9c91;
             font-size: 0.7rem;
+            white-space: nowrap;
           }
           p {
             background: rgba(0, 0, 0, 0.05);
