--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
@@ -146,8 +146,8 @@ header {
       text-transform: uppercase;
       cursor: pointer;
       line-height: 20px;
-      background: #272b2f;
-      color: #fff;
+      background: #dedede;
+      color: #1f2428;
   }
       i {
         margin-right: 27px;
