--- a/client/src/index.css
+++ b/client/src/index.css
@@ -367,8 +367,8 @@
     margin-top: 3px; }
   :global .caption-subject {
     color: #666;
-    font-size: 0.9rem;
-    font-weight: 600;
+    font-size: 1rem;
+    font-weight: normal;
     line-height: 26px;
     margin-bottom: 0; }
   :global .caption-helper {
