--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -549,8 +549,8 @@ $forntSize: 0.7rem;
 
   .caption-subject {
     color: #666;
-    font-size: 0.9rem;
-    font-weight: 600;
+    font-size: 1rem;
+    font-weight: normal;
     line-height: 26px;
     margin-bottom: 0;
   }
