--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -122,26 +122,28 @@ header {
     padding: 8px 5px;
     margin: 0;
     font-size: 0.8rem;
-    border-bottom: 1px dotted #4e4e4e;
+    border-bottom: 1px dotted #818588;
     text-transform: uppercase;
     cursor: pointer;
     line-height: 20px;
-    background: #7b7b7b;
-    color: #fff; }
-    .hptl-phase1-sideMenuBar ul.tree-structure-menu li i {
-      margin-right: 27px;
-      margin-left: 12px;
-      display: inline-block;
-      vertical-align: initial; }
-    .hptl-phase1-sideMenuBar ul.tree-structure-menu li span {
-      display: inline-block;
-      width: 78%; }
-  .hptl-phase1-sideMenuBar ul.tree-structure-menu li:hover {
-    background: #fff;
-    color: #00bcb0; }
-  .hptl-phase1-sideMenuBar ul.tree-structure-menu li.active {
-    background: #00bcb0;
-    color: #fff; }
+    background: #929292;
+    color: #ffffff; }
+  .hptl-phase1-sideMenuBar ul.tree-structure-menu i {
+    margin-right: 27px;
+    margin-left: 12px;
+    display: inline-block;
+    vertical-align: initial; }
+  .hptl-phase1-sideMenuBar ul.tree-structure-menu span {
+    display: inline-block;
+    width: 78%; }
+
+.hptl-phase1-sideMenuBar li:hover {
+  background: #fff;
+  color: #00bcb0; }
+
+.hptl-phase1-sideMenuBar li.active {
+  background: #00bcb0;
+  color: #fff; }
 
 .hptl-phase1-sideMenuBar .close-menu {
   padding-top: 5px;
@@ -150,7 +152,7 @@ header {
 
 .hptl-phase1-sideMenuBar .menuBar-title {
   display: flex;
-  padding: 5px;
+  padding: 0 5px;
   font-size: 20px;
   height: 52px;
   background: #000;
