--- a/client/src/Components/MRD/PatientMRD/HistoricalData/historical_data.scss
+++ b/client/src/Components/MRD/PatientMRD/HistoricalData/historical_data.scss
@@ -1,2 +1,14 @@
 .historical-data {
 }
+#historicGridDataCntr {
+  .ReactTable {
+    max-height: 31vh !important;
+  }
+}
+.chartCNtr {
+  max-height: 31vh !important;
+  canvas {
+    max-height: 30vh !important;
+    margin: 2%;
+  }
+}
