--- a/client/src/Components/PatientProfile/patientprofile.scss
+++ b/client/src/Components/PatientProfile/patientprofile.scss
@@ -217,7 +217,7 @@
             border-radius: 20px;
             background: #3f9c91;
             font-size: 0.7rem;
-            white-space: nowrap;
+            white-space: normal;
           }
           p {
             background: rgba(0, 0, 0, 0.05);
