--- a/client/src/Components/Appointment/appointment.css
+++ b/client/src/Components/Appointment/appointment.css
@@ -1,7 +1,7 @@
 .appointment .appointment-outer-cntr {
   overflow-x: auto;
   overflow-y: hidden;
-  width: 94.8vw; }
+  width: 94vw; }
 
 .appointment .appointment-inner-cntr {
   min-width: 94vw !important; }
@@ -93,7 +93,10 @@
 .appointment .tg {
   display: inline-block;
   margin-right: 5px;
-  vertical-align: top; }
+  vertical-align: top;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  margin-bottom: 10px;
+  border-bottom: 1px solid #d3d3d3; }
   .appointment .tg thead tr {
     text-align: center; }
     .appointment .tg thead tr .tg-amwm {
