--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -476,7 +476,8 @@ body {
   bottom: 0;
   left: 0;
   width: 100vw;
-  padding: 10px 15px; }
+  padding: 5px 15px;
+  z-index: 1080; }
   :global .hptl-phase1-footer button {
     float: right;
     margin-left: 10px;
