--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -587,7 +587,8 @@ body {
     bottom: 0;
     left: 0;
     width: 100vw;
-    padding: 10px 15px;
+    padding: 5px 15px;
+    z-index: 1080;
     button {
       float: right;
       margin-left: 10px;
