--- a/client/src/Components/AdministrationSetup/admin_setup.css
+++ b/client/src/Components/AdministrationSetup/admin_setup.css
@@ -4,6 +4,9 @@
   border: 1px solid #d3d3d3;
   background: #ffff;
   padding-top: 10px; }
-  .admin_setup .admin-section #adminGrid_Cntr .ReactTable {
-    max-width: 98vw !important;
-    max-height: 53vh !important; }
+  .admin_setup .admin-section #adminGrid_Cntr {
+    margin-top: 10px;
+    margin-bottom: 10px; }
+    .admin_setup .admin-section #adminGrid_Cntr .ReactTable {
+      max-width: 98vw !important;
+      max-height: 70vh !important; }
