--- a/client/src/Components/AdministrationSetup/admin_setup.scss
+++ b/client/src/Components/AdministrationSetup/admin_setup.scss
@@ -7,9 +7,11 @@
     padding-top: 10px;
 
     #adminGrid_Cntr {
+      margin-top: 10px;
+      margin-bottom: 10px;
       .ReactTable {
         max-width: 98vw !important;
-        max-height: 53vh !important;
+        max-height: 70vh !important;
       }
     }
   }
