--- a/client/src/Components/Appointment/appointment.scss
+++ b/client/src/Components/Appointment/appointment.scss
@@ -219,8 +219,41 @@
           left: 0;
           top: 0;
         }
+        .appStatusListCntr {
+          &:hover {
+            .appStatusList {
+              display: block;
+            }
+          }
+          ul.appStatusList {
+            display: none;
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            color: #000;
+            background: #fff;
+            box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+            z-index: 9999;
+            position: absolute;
+            width: 100%;
+            left: 0;
+            top: 37px;
+            li {
+              margin: 0;
+              padding: 0;
+              list-style: none;
+              border-top: 1px solid #fff;
+              display: block;
+              span {
+                padding: 3px 5px;
+                display: block;
+                font-size: 0.7rem;
+              }
+            }
+          }
+        }
       }
-      .dynPatient:hover span {
+      .dynPatient span:hover {
         text-decoration: underline;
       }
       .patientStdbyCount {
@@ -291,7 +324,7 @@
         color: #7d7d7d;
       }
       i.fa-plus {
-        visibility: hidden;
+        display: none;
         position: absolute;
         top: -1px;
         right: -1px;
@@ -301,30 +334,49 @@
         color: #009e94;
         cursor: pointer;
       }
-      i.fa-pen {
+      i.fa-clock {
         color: blue !important;
-      }
-      i.fa-times {
-        visibility: hidden;
-        color: black !important;
-      }
-      .dynPatient:hover i.fa-times {
-        visibility: visible;
+        display: none;
         position: absolute;
-        top: 0px !important;
+        top: 20px !important;
         right: 0px;
         border-left: 1px solid rgba(0, 0, 0, 0.1);
         border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-        padding: 5px 5px 3px 3px;
+        width: 20px;
+        height: 20px;
+        text-align: center;
+        line-height: 20px;
+        font-size: 0.7rem;
       }
-
+      i.fa-times {
+        display: none;
+        display: none;
+        position: absolute;
+        top: 0 !important;
+        right: 0px;
+        border-left: 1px solid rgba(0, 0, 0, 0.1);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+        width: 20px;
+        height: 20px;
+        text-align: center;
+        line-height: 20px;
+        font-size: 0.7rem;
+      }
+      .dynPatient:hover i.fa-times,
+      .dynPatient:hover i.fa-clock {
+        display: block;
+      }
       i.fa-times:hover {
         color: red !important;
         background: rgba(255, 255, 255, 0.7) !important;
       }
+      i.fa-clock:hover {
+        color: green !important;
+        background: rgba(255, 255, 255, 0.7) !important;
+      }
       td.tg-baqh:hover {
         i.fa-plus {
-          visibility: visible;
+          display: block;
         }
       }
 
