--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
@@ -160,8 +160,7 @@ header {
         width: 78%;
       }
       &:hover {
-        background: #fff;
-        color: rgb(0, 188, 176);
+        background: #afafaf;
       }
       &.active {
         background: rgb(0, 188, 176);
