--- a/client/src/Components/common/BreadCrumb/breadcrumb.css
+++ b/client/src/Components/common/BreadCrumb/breadcrumb.css
@@ -69,14 +69,8 @@
 
 .print-area div {
   float: right;
-  padding-right: 50px;
   height: 75px;
   border-left: 1px solid #adaaaa; }
-  .print-area div ul {
-    margin-left: 50%; }
-  .print-area div i {
-    color: #000000;
-    padding-top: 25px; }
 
 .print-area .printImg {
   height: 36px;
@@ -85,29 +79,25 @@
 .print-area .printMenuDisplay {
   padding: 19px 9px; }
 
+.print-area .dropdown-menu {
+  left: inherit;
+  right: 0;
+  display: none;
+  border-radius: 0 0 5px 5px;
+  top: 72px;
+  height: auto; }
+  .print-area .dropdown-menu .dropdown-item {
+    padding: 0.5rem 0.8rem;
+    color: #686868; }
+    .print-area .dropdown-menu .dropdown-item i {
+      margin-right: 0.5rem; }
+    .print-area .dropdown-menu .dropdown-item:hover {
+      color: #00999c; }
+
 .print-area .printMenuDisplay:hover .printActionMenu,
 .print-area .printImg:hover .printActionMenu {
   display: block; }
 
-.print-area .printActionMenu {
-  cursor: pointer;
-  display: none;
-  box-shadow: -2px 3px 2px rgba(0, 0, 0, 0.3);
-  border-radius: 0 0 0 5px;
-  margin: 0;
-  padding: 0;
-  background: #ffffff;
-  right: 0;
-  top: 75px;
-  position: absolute;
-  overflow: hidden;
-  width: 15vw; }
-  .print-area .printActionMenu li {
-    list-style: none;
-    border-bottom: 1px solid #000;
-    padding: 15px; }
-    .print-area .printActionMenu li span {
-      color: #000; }
-
-.print-area .printActionMenu:hover {
+.print-area .printMenuDisplay:hover .dropdown-menu,
+.print-area .printImg:hover .dropdown-menu {
   display: block; }
