--- a/client/src/Components/common/BreadCrumb/breadcrumb.scss
+++ b/client/src/Components/common/BreadCrumb/breadcrumb.scss
@@ -101,16 +101,8 @@
 .print-area {
   div {
     float: right;
-    padding-right: 50px;
     height: 75px;
     border-left: 1px solid #adaaaa;
-    ul {
-      margin-left: 50%;
-    }
-    i {
-      color: #000000;
-      padding-top: 25px;
-    }
   }
   .printImg {
     height: 36px;
@@ -119,36 +111,32 @@
   .printMenuDisplay {
     padding: 19px 9px;
   }
+
+  .dropdown-menu {
+    left: inherit;
+    right: 0;
+    display: none;
+    border-radius: 0 0 5px 5px;
+    top: 72px;
+    height: auto;
+    .dropdown-item {
+      padding: 0.5rem 0.8rem;
+      color: #686868;
+      i {
+        margin-right: 0.5rem;
+      }
+      &:hover {
+        color: #00999c;
+      }
+    }
+  }
   .printMenuDisplay:hover,
   .printImg:hover {
     .printActionMenu {
       display: block;
     }
-  }
-
-  .printActionMenu {
-    cursor: pointer;
-    display: none;
-    box-shadow: -2px 3px 2px rgba(0, 0, 0, 0.3);
-    border-radius: 0 0 0 5px;
-    margin: 0;
-    padding: 0;
-    background: #ffffff;
-    right: 0;
-    top: 75px;
-    position: absolute;
-    overflow: hidden;
-    width: 15vw;
-    li {
-      list-style: none;
-      border-bottom: 1px solid #000;
-      padding: 15px;
-      span {
-        color: #000;
-      }
+    .dropdown-menu {
+      display: block;
     }
-  }
-  .printActionMenu:hover {
-    display: block;
   }
 }
