--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -133,7 +133,8 @@ header {
         margin-right: 14px;
         margin-left: 15px;
         display: inline-block;
-        vertical-align: initial; }
+        vertical-align: initial;
+        color: #c1c1c1; }
       .hptl-phase1-sideMenuBar .sub-menu-option ul.tree-structure-menu li span {
         padding: 8px 5px 8px 13px;
         display: inline-block;
@@ -141,9 +142,13 @@ header {
         border-left: 1px solid #f7f7f7; }
       .hptl-phase1-sideMenuBar .sub-menu-option ul.tree-structure-menu li:hover {
         background: #afafaf; }
+        .hptl-phase1-sideMenuBar .sub-menu-option ul.tree-structure-menu li:hover i {
+          color: #fff; }
       .hptl-phase1-sideMenuBar .sub-menu-option ul.tree-structure-menu li.active {
         background: #00bcb0;
         color: #fff; }
+        .hptl-phase1-sideMenuBar .sub-menu-option ul.tree-structure-menu li.active i {
+          color: #fff; }
 
 .hptl-phase1-sideMenuBar .close-menu {
   padding-top: 5px;
