--- a/client/src/Components/InsuranceSetup/InsuranceAdd/InsuranceAdd.scss
+++ b/client/src/Components/InsuranceSetup/InsuranceAdd/InsuranceAdd.scss
@@ -6,7 +6,7 @@
 .stepper-set {
   div {
     padding: 5px;
-    padding-top: 10px;
+    padding-bottom: 10px;
     div {
       span {
         span:last-child {
