--- a/client/src/Components/NurseWorkbench/nurse_workbench.scss
+++ b/client/src/Components/NurseWorkbench/nurse_workbench.scss
@@ -203,7 +203,12 @@
       }
       li:hover {
         background: #ebfeff;
+        //background: blanchedalmond;
         cursor: pointer;
+      }
+      .active {
+        //background: #ebfeff;
+        background: blanchedalmond;
       }
     }
   }
