--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -516,6 +516,7 @@ input[type="text"],
 input[type="number"],
 input[type="tel"],
 input[type="email"],
+input[type="password"],
 input[type="time"] {
   font-size: 0.85rem;
   padding: 4px 6px 4px;
@@ -628,10 +629,15 @@ textarea {
     .algaeh-datePicker button svg {
       height: 16px; }
 
+.ageMonth input,
+.ageDay input {
+  margin-top: 23px; }
+
 .mandatory input[type="text"],
 .mandatory input[type="number"],
 .mandatory input[type="tel"],
 .mandatory input[type="email"],
+.mandatory input[type="password"],
 .mandatory input.autoselect-input,
 .mandatory .algaeh-datePicker input[type="date"] {
   background-color: none;
@@ -641,7 +647,8 @@ input[type="text"]:disabled,
 input[type="number"]:disabled,
 input[type="tel"]:disabled,
 input[type="email"]:disabled,
-input[type="time"]:disabled {
+input[type="time"]:disabled,
+input[type="password"]:disabled {
   background: #fffdfa;
   border: 1px dashed #d3d3d3;
   color: #000;
