--- a/client/src/Components/Dashboard/dashboard.css
+++ b/client/src/Components/Dashboard/dashboard.css
@@ -1,37 +1,57 @@
 .dashboard {
-  font-weight: normal;
-  text-align: center;
-  margin: 15px 0;
-  /*Gap*/ }
-  .dashboard .paper {
-    margin: 10;
-    text-align: center; }
-  .dashboard .imp {
-    color: #ff063e; }
-  .dashboard .txt-fld {
-    background-color: #fbfbfb;
-    width: 100%; }
-  .dashboard .select-fld {
-    padding-left: 8px;
-    background-color: #fbfbfb;
-    width: 100%; }
-  .dashboard .table-details {
-    text-align: center; }
-  .dashboard .table-hover tbody tr:hover td,
-  .dashboard .table-hover tbody tr:hover th {
-    background-color: #fcffde; }
-  .dashboard .form-details {
-    margin-top: 20px;
-    margin-left: "auto";
-    margin-right: "auto"; }
-  .dashboard th,
-  .dashboard td {
-    border-right: 1px solid #ffffff; }
-  .dashboard .radio [type="radio"]:checked + label:after {
-    border-color: #00bcb0;
-    background-color: #00bcb0; }
-  .dashboard .radio-gap [type="radio"].with-gap:checked + label:before {
-    border-color: #00bcb0; }
-  .dashboard .radio-gap [type="radio"]:checked + label:after {
-    border-color: #00bcb0;
-    background-color: #00bcb0; }
+  margin-top: 15px; }
+  .dashboard .card {
+    border-radius: 6px;
+    box-shadow: 0 2px 2px rgba(204, 197, 185, 0.5);
+    background-color: #ffffff;
+    color: #252422;
+    margin-bottom: 20px;
+    position: relative;
+    z-index: 1; }
+    .dashboard .card .content {
+      padding: 15px 15px 10px 15px; }
+      .dashboard .card .content .footer {
+        padding: 0;
+        font-size: 0.8rem;
+        line-height: 30px; }
+        .dashboard .card .content .footer .stats {
+          display: inline-block;
+          color: #808080; }
+          .dashboard .card .content .footer .stats span {
+            font-weight: 600;
+            color: #000; }
+        .dashboard .card .content .footer hr {
+          margin: 0; }
+    .dashboard .card .numbers {
+      font-size: 1.5rem;
+      text-align: right;
+      font-weight: 600; }
+      .dashboard .card .numbers p {
+        font-size: 1rem;
+        font-weight: normal;
+        margin: 0; }
+    .dashboard .card .icon-big i {
+      font-size: 3rem;
+      min-height: 3.5rem; }
+    .dashboard .card .icon-big .fa-users:before {
+      color: #c655cc; }
+    .dashboard .card .icon-big .fa-hospital:before {
+      color: #7455cc; }
+    .dashboard .card .icon-big .fa-user-md:before {
+      color: #3c67dd; }
+    .dashboard .card .icon-big .fa-walking:before {
+      color: #9d3cdd; }
+    .dashboard .card h6 {
+      padding: 0 15px;
+      min-height: 35px;
+      border-bottom: 1px dashed #eee;
+      color: #666;
+      font-size: 1rem;
+      font-weight: normal;
+      line-height: 26px;
+      margin: 10px 0; }
+    .dashboard .card .dashboardChartsCntr {
+      margin: 10px;
+      width: 95%;
+      height: auto;
+      position: relative; }
