--- a/client/src/Components/Dashboard/dashboard.css
+++ b/client/src/Components/Dashboard/dashboard.css
@@ -20,8 +20,6 @@
           .dashboard .card .content .footer .stats span {
             font-weight: 600;
             color: #000; }
-        .dashboard .card .content .footer hr {
-          margin: 0; }
     .dashboard .card .numbers {
       font-size: 1.5rem;
       text-align: right;
@@ -33,7 +31,7 @@
     .dashboard .card .icon-big i {
       font-size: 3rem;
       min-height: 3.5rem; }
-    .dashboard .card .icon-big .fa-users:before {
+    .dashboard .card .icon-big .fa-hand-holding-usd:before {
       color: #c655cc; }
     .dashboard .card .icon-big .fa-hospital:before {
       color: #7455cc; }
@@ -55,3 +53,7 @@
       width: 95%;
       height: auto;
       position: relative; }
+      .dashboard .card .dashboardChartsCntr h6 {
+        text-align: center; }
+  .dashboard hr {
+    margin: 0 !important; }
