--- a/client/src/Components/RegistrationPatient/ConsultationDetails/ConsultationForm/ConsultationForm.scss
+++ b/client/src/Components/RegistrationPatient/ConsultationDetails/ConsultationForm/ConsultationForm.scss
@@ -1,13 +1,7 @@
-.hptl-phase1-consultation-details {
-  //background: #f2f2f2;
-  .consultation-section {
-    border: 1px solid #d3d3d3;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border-top-right-radius: 5px;
-  }
-}
 .hptl-phase1-add-consultation-form {
+  background: #ffff;
+  border-radius: 5px;
+
   .primary-details {
     border-right: 1px dashed #d3d3d3;
     padding-top: 8px;
