--- a/client/src/Components/PatientProfile/PatientHistory/PatientHistory.css
+++ b/client/src/Components/PatientProfile/PatientHistory/PatientHistory.css
@@ -1,14 +1,18 @@
 #subjectAccordian .accordion-btn {
   color: #444;
   cursor: inherit;
-  width: 100%;
+  width: 90%;
   padding: 7px;
   text-align: left;
   outline: none;
   font-size: 15px;
   transition: 0.4s;
-  background-color: #ffffff;
-  border: none; }
+  border: none;
+  border-bottom: 1px solid #efefef; }
+
+@media screen and (min-width: 481px) and (max-width: 1024px) and (orientation: landscape) {
+  #subjectAccordian .accordion-btn {
+    width: 86.5%; } }
 
 #subjectAccordian textarea {
   border-radius: 0 !important;
@@ -18,13 +22,51 @@
   height: 18.6vh; }
 
 #subjectAccordian .accordion-btn:after {
+  content: "\21E9";
   color: #777;
   font-weight: bold;
   float: right;
   margin-left: 5px; }
 
+#subjectAccordian .accordion-btn:hover {
+  cursor: pointer; }
+
+#subjectAccordian .active:after {
+  content: "\21E7"; }
+
 #subjectAccordian .panel {
   width: 100%;
-  background-color: white;
+  background-color: #efefef;
   overflow: hidden;
-  transition: max-height 0.2s ease-out; }
+  max-height: 0;
+  transition: max-height 0.2s ease-out;
+  margin-left: 5px;
+  margin-right: 5px; }
+
+#subjectAccordian .customTable th {
+  background: #8c8c8c;
+  text-transform: uppercase;
+  font-size: 0.7rem !important;
+  min-width: auto !important;
+  color: #fff;
+  font-weight: normal; }
+
+#subjectAccordian .customTable td {
+  min-width: auto !important;
+  font-size: 0.8rem !important; }
+
+#subjectAccordian .actions {
+  float: left;
+  display: inline-block;
+  margin-top: 0px;
+  margin-left: 4px;
+  border-bottom: 1px solid #efefef;
+  padding-top: 3px;
+  padding-right: 5px; }
+  #subjectAccordian .actions .btn.btn-circle {
+    width: 28px;
+    height: 28px;
+    padding: 3px 7px;
+    color: #fff;
+    text-align: center;
+    border: none; }
