--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -1060,8 +1060,10 @@ th {
 
 .algaehModalWrapper {
   position: fixed;
+  margin-top: 32vh;
   top: 0;
-  z-index: 999999;
+  left: 0;
+  z-index: 9999;
   width: 100%;
   background: rgba(0, 0, 0, 0.4);
   height: 100%; }
