--- a/client/src/Components/Procurement/ReceiptEntry/ReceiptEntry.css
+++ b/client/src/Components/Procurement/ReceiptEntry/ReceiptEntry.css
@@ -1,6 +1,7 @@
 #ReceiptGrid .ReactTable {
-  max-width: 95vw !important; }
+  max-width: 95vw !important;
+  max-height: 47vh !important; }
 
 @media screen and (min-width: 481px) and (max-width: 1024px) and (orientation: landscape) {
   #ReceiptGrid .ReactTable {
-    max-width: 93vw !important; } }
+    max-width: 95vw !important; } }
