--- a/client/src/Components/Procurement/ReceiptEntry/ReceiptEntry.scss
+++ b/client/src/Components/Procurement/ReceiptEntry/ReceiptEntry.scss
@@ -4,11 +4,12 @@
 #ReceiptGrid {
   .ReactTable {
     max-width: 95vw !important;
+    max-height: 47vh !important ;
   }
 
   @media screen and (min-width: 481px) and (max-width: 1024px) and (orientation: landscape) {
     .ReactTable {
-      max-width: 93vw !important;
+      max-width: 95vw !important;
     }
   }
 }
