--- a/client/src/Components/Login/Login.scss
+++ b/client/src/Components/Login/Login.scss
@@ -29,6 +29,12 @@
     margin: 2px;
     height: 32px;
   }
+
+  .clearall {
+    top: 4px;
+    right: 31px;
+  }
+
   .margintop15 {
     margin-top: 9%;
   }
