--- a/client/src/Components/Wrapper/autoComplete.scss
+++ b/client/src/Components/Wrapper/autoComplete.scss
@@ -119,3 +119,8 @@
 .myUL li a:hover:not(.header) {
   background-color: #eee;
 }
+.onselectedByNav {
+  a {
+    background-color: #cef4ff !important;
+  }
+}
